mealie/mealie/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app mealie
  labels:
    app.kubernetes.io/name: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: *app
          image: http://harbor-portsl.harbor-system.svc.cluster.local/library/mealie:2.5.0 #registry.${SECRET_DOMAIN_0}/library/mealie:2.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              cpu: 500m
            requests:
              memory: 1024Mi
              cpu: 200m
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
