mealie/mealie/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app mealie
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: *app
