mealie/mealie/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`meal.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: mealie
          port: 80
  tls: {}
